--- a/tutorials/tutorial3/tutorial3_covariates.Rmd
+++ b/tutorials/tutorial3/tutorial3_covariates.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Population modelling \n for census support"
 subtitle: "Tutorial 3: How to model small-scale spatial variations?"
-author: "Edith Darin and Douglas Leasure"
 date: "Compiled on `r format(Sys.time(), '%d/%m/%Y')`"
 output: 
   bookdown::html_document2:
@@ -22,6 +21,16 @@ bibliography: references.bib
 htmltools::img(src = knitr::image_uri("assets/pic/320px-UNFPA_logo.svg.png"),
                alt = 'logo', style = 'position:absolute; top:60px; right:0; padding:20px; width: 25%; height: auto')
 
+local({
+  hook_output <- knitr::knit_hooks$get('warning')
+  knitr::knit_hooks$set(warning = function(x, options) {
+    if (!is.null(options$max.height)) options$attr.warning <- c(
+      options$attr.warning,
+      sprintf('style="max-height: %s;"', options$max.height)
+    )
+    hook_output(x, options)
+  })
+})
 ```
 
 ![](../../assets/pic/wp_logotype_gray_low.png)
@@ -311,13 +320,13 @@ methods:
 
 -   univariate model, testing each covariate successively
 
-# Covariates in Nigeria, v1.2
+# Including covariates in the model
 
 We focused in the remaining parts of the tutorial on the data we
 downloaded from @leasure2020 which corresponds to the Nigeria model
 v1.2.
 
-## Overview of the covariates
+## Overview of the covariates in Nigeria, v1.2
 
 Six covariates were used in Nigeria v1.2 model:
 
@@ -355,7 +364,7 @@ One key reason for including this covariate was to account for a strong
 north--south gradient in household sizes, with significantly more people
 per household in northern Nigeria than in southern Nigeria.
 
-## Data preparation
+## Preparing the data
 
 To integrate the covariates in the model, we build first a dataset with
 the average of the covariate values for each study site using zonal
@@ -367,9 +376,9 @@ of the covariate values at grid cell level.*
 
 Figure \@ref(fig:scatter) shows the relation between the covariates and
 the population density at study site level. We see that household size
-(`x_3`) is strongly positively correlated with population density. The
+(`x_3`) is positively assocaited with population density. The
 negative value are due to the scaling method adopted. On the opposite,
-nonresidential settled area (`x_6`) is negatively correlated which is
+nonresidential settled area (`x_6`) is negatively associated which is
 expected: the more the surroundings are nonresidential the lower the
 population density.
 
@@ -442,7 +451,7 @@ write_csv(covs_scaled, 'tutorials/data/covs_scaled.csv')
 write_csv(scale_factor, 'tutorials/data/scale_factor.csv')
 ```
 
-## Model implementation
+##Implementing the model
 
 Equation \@ref(eq:model1) is implemented in `stan` as follows:
 
@@ -515,8 +524,8 @@ stan_data_model1 <- list(
 
 We add `beta` as parameter to monitor and run the model.
 
-```{r,}
-pars <- c('alpha','sigma','beta','alpha_t', 'population_hat',  'density_hat')
+```{r,max.height='150px'}
+pars <- c('alpha','sigma','beta','alpha_t', 'nu_alpha', 'nu_alpha_t', 'population_hat',  'density_hat')
 
 # mcmc
 fit1 <- rstan::stan(file = file.path('tutorials/tutorial3/tutorial3_model1.stan'), 
@@ -528,7 +537,60 @@ fit1 <- rstan::stan(file = file.path('tutorials/tutorial3/tutorial3_model1.stan'
                    seed = seed)
 ```
 
-No convergence issue. We can plot the $\hat\beta_k$. The sign and
+The model runs into convergence issues.
+
+### A note on initialisation
+
+This is an opportunity to discuss about **initialisation*.*** MCMC
+simulations that are the backbone of Bayesian estimation needs to be
+given an initial value to start exploring the parameter space.
+
+It is in `stan` controlled by the option `init` whose default is
+`random`, that is "*Let Stan generate random initial values for all
+parameters. The seed of the random number generator used by Stan can be
+specified via the seed argument. If the seed for Stan is fixed, the same
+initial values are used. The default is to randomly generate initial
+values between -2 and 2 on the unconstrained support".*
+
+Based on our understanding of population distribution,
+we define the start of the estimation process in the environs of the likely parameters value.
+
+We will initialise only root parameters, that are not depending on other parameters.
+```{r}
+
+inits.out <- list()
+set.seed(stan_data_model1$seed)
+
+for (c in 1:chains){
+  inits.i <- list()
+  # intercept
+  inits.i$pop_density <- rlnorm(stan_data_model1$n, log(stan_data_model1$population / stan_data_model1$area), 0.5)
+  inits.i$sigma <- runif(1, 0.4, 0.8)
+  inits.i$alpha <- runif(1, 3, 6)
+  inits.i$nu_alpha <- runif(1, 0.5, 1.5)
+  inits.i$nu_alpha_t <- runif(1, 0.5, 1.5)
+  inits.i$beta <- runif(stan_data_model1$ncov, -1, 1)
+  
+  inits.out[[c]] <- inits.i
+}
+```
+
+We run the estimation with these initialisation values.
+```{r, max.height='150px'}
+fit1bis <- rstan::stan(file = file.path('tutorials/tutorial3/tutorial3_model1.stan'), 
+                   data = stan_data_model1,
+                   iter = warmup + iter, 
+                   chains = chains,
+                   warmup = warmup, 
+                   pars = pars,
+                   seed = seed,
+                   init= inits.out)
+```
+
+We only observe the same issue than in tutorial 2 that is integrer overflow for the prediction of population in the warmup period.
+We can safely say that the model has converged.
+
+We can plot the $\hat\beta_k$. The sign and
 magnitude of the covariate effects are inline with the correlation shown
 in Figure \@ref(fig:scatter).
 
@@ -536,19 +598,14 @@ in Figure \@ref(fig:scatter).
 stan_plot(fit1, pars='beta', fill_color='orange')
 ```
 
-The next question is: How does integrating covariates improve the model?
+## Comparing prediction with previous model
 
-We run Tutorial 2 model 3 to compare:
+The next question is: **How much improvement is brought by integrating covariates in the model?**
 
-```{r}
-pars <- pars[!grepl('beta', pars)]
-fit0 <- rstan::stan(file = file.path('tutorials/tutorial2/tutorial2_model3.stan'), 
-                   data = stan_data_model1,
-                   iter = warmup + iter, 
-                   chains = chains,
-                   warmup = warmup, 
-                   pars = pars,
-                   seed = seed)
+We load Tutorial 2 model 3 to compare:
+
+```{r, max.height='150px'}
+fit0 <- readRDS('tutorials/tutorial2/tutorial2_model3_fit.rds')
 ```
 
 We can then compute the predictions for every study site and compare the
@@ -561,11 +618,6 @@ getPopPredictions <- function(model_fit,
   # extract predictions
   predicted_pop <- as_tibble(extract(model_fit, estimate)[[estimate]])
   colnames(predicted_pop) <- reference_data$id
-  
-  # check if the trick used for poissong_rng in stan worked
-  if(any(predicted_pop==-1)){
-    print('-1 in predicted population')
-  }
   
   # summarise predictions
   predicted_pop <- predicted_pop %>% 
@@ -598,8 +650,7 @@ comparison_df <- rbind(
 comparison_df %>% group_by(Model) %>% 
   summarise( `Bias`= mean(residual),
     `Inaccuracy` = mean(abs(residual)),
-        `Imprecision` = sd(residual),
-    `Mean Confidence Interval Size` =mean(ci_size)
+        `Imprecision` = sd(residual)
 ) %>%  kbl(caption = 'Goodness-of-metrics comparison with and without covariates ') %>% kable_minimal()
 ```
 
@@ -720,7 +771,7 @@ random effect.
 Note that this setting allows to test the model with different covariate
 candidates for the random effect.
 
-```{r, message =F}
+```{r,  max.height='150px'}
 stan_data_model2 <- list(
   population = data$N,
   n = nrow(data),
@@ -735,7 +786,23 @@ stan_data_model2 <- list(
   cov_random = covs_scaled$x4
   )
 
-pars <- c('alpha','sigma','beta_fixed','beta_random','alpha_t','alpha_t_r', 'population_hat',  'density_hat')
+pars <- c('alpha','sigma','beta_fixed','beta_random','alpha_t','alpha_t_r', 'nu_alpha', 'nu_alpha_t', 'population_hat',  'density_hat')
+
+inits.out <- list()
+set.seed(stan_data_model2$seed)
+for (c in 1:chains){
+  inits.i <- list()
+  # intercept
+  inits.i$pop_density <- rlnorm(stan_data_model2$n, log(stan_data_model2$population / stan_data_model2$area), 0.5)
+  inits.i$sigma <- runif(1, 0.4, 0.8)
+  inits.i$alpha <- runif(1, 3, 6)
+  inits.i$nu_alpha <- runif(1, 0.5, 1.5)
+  inits.i$nu_alpha_t <- runif(1, 0.5, 1.5)
+  inits.i$beta_fixed <- runif(stan_data_model2$ncov_fixed, -1, 1)
+  inits.i$beta_random <- runif(stan_data_model2$ntype, -1, 1)
+
+  inits.out[[c]] <- inits.i
+}
 
 # mcmc
 fit2 <- rstan::stan(file = file.path('tutorials/tutorial3/tutorial3_model2.stan'), 
@@ -744,7 +811,8 @@ fit2 <- rstan::stan(file = file.path('tutorials/tutorial3/tutorial3_model2.stan'
                    chains = chains,
                    warmup = warmup, 
                    pars = pars,
-                   seed = seed)
+                   seed = seed,
+                   init = inits.out)
 ```
 
 No convergence issue. We plot `beta_random` that is a vector with a
@@ -772,8 +840,7 @@ comparison_df <- rbind(
 comparison_df %>% group_by(model) %>% 
   summarise( `Bias`= mean(residual),
     `Inaccuracy` = mean(abs(residual)),
-        `Imprecision` = sd(residual),
-    `Mean Confidence Interval Size` = mean(ci_size)
+        `Imprecision` = sd(residual)
 ) %>%  kbl(caption = 'Goodness-of-metrics comparison with and without random effect in x4 ') %>% kable_minimal()
 ```
 
@@ -786,5 +853,15 @@ in Tutorial 4.
 ```{r, eval=T}
 saveRDS(fit2, 'tutorials/tutorial3/tutorial3_model2_fit.rds')
 ```
+
+# Acknowledgements
+
+This tutorial was written by Edith Darin from WorldPop, University of
+
+Southampton and Douglas Leasure from Leverhulme Centre for Demographic
+
+Science, University of Oxford.
+
+Funding for the work was provided by the United Nations Population Fund.
 
 # References
