--- a/tutorials/day1_presentation.Rmd
+++ b/tutorials/day1_presentation.Rmd
@@ -5,7 +5,7 @@ author: "Edith Darin"
 date: "`r Sys.Date()`"
 output:
   xaringan::moon_reader:
-    css: [default, css/xaringan-themer.css, css/presentation_custom.css]
+    css: [css/xaringan-themer.css, css/presentation_custom.css]
 ---
 
 
@@ -14,9 +14,7 @@ options(htmltools.dir.version = FALSE)
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
-library(xaringanthemer)
-style_mono_light(base_color = "#ff8000")
-#style_duo_accent(primary_color = "#ff8000", secondary_color = "#4db3ff")
+xaringanthemer::style_mono_light(base_color = "#ff8000")
 ```
 
 ```{r xaringanExtra-scribble, echo=FALSE}
